# hello-world-python-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
script/: bootstrap  bootstrap.py
tests/: test_main.py
